# src/swagger_output.json
@@ -2,30 +2,237 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "Luiza<Code> - Omni Channel",
+    "description": "API NodeJS para resolver a funcionalidade de Omni Channel do cliente. Projeto proposto na aceleração Luiza Code, turma NodeJS."
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "tags": [],
-  "schemes": [
-    "http"
+  "tags": [
+    {
+      "name": "Lojas",
+      "description": "Endpoints relacionados às lojas."
+    },
+    {
+      "name": "Produtos",
+      "description": "Endpoints relacionados ao recursos de produto."
+    },
+    {
+      "name": "Pedidos",
+      "description": "Endpoints relacionados aos pedidos do cliente."
+    }
   ],
-  "consumes": [],
-  "produces": [],
+  "schemes": [
+    "http",
+    "https"
+  ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
     "/lojas/": {
       "get": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "Lojas"
+        ],
+        "description": "Endpoints para se obter a lista das lojas.",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Lista de lojas encontrada.",
+            "schema": {
+              "$ref": "#/definitions/Lojas"
+            }
+          },
+          "400": {
+            "description": "Houve algum erro na requisição."
+          },
+          "404": {
+            "description": "Lista de lojas não encontrada."
+          }
+        }
+      }
+    },
+    "/produtos/": {
+      "get": {
+        "tags": [
+          "Produtos"
+        ],
+        "description": "Endpoints para se obter uma lista de produtos.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Lista de produtos encontrada.",
+            "schema": {
+              "$ref": "#/definitions/Produtos"
+            }
+          },
+          "400": {
+            "description": "Houve algum erro na requisição."
+          },
+          "404": {
+            "description": "Lista de produtos não encontrada."
+          }
+        }
+      }
+    },
+    "/pedidos/{idPedido}": {
+      "get": {
+        "tags": [
+          "Pedidos"
+        ],
+        "description": "Endpoint para a consulta de pedidos do cliente.",
+        "parameters": [
+          {
+            "name": "idPedido",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Consulta realizada com sucesso."
+          },
+          "400": {
+            "description": "Houve algum erro na requisição."
+          },
+          "404": {
+            "description": "Pedido não encontrado."
+          }
+        }
+      }
+    },
+    "/pedidos/": {
+      "get": {
+        "tags": [
+          "Pedidos"
+        ],
+        "description": "Endpoint para a consulta do status dos pedidos do cliente.",
+        "parameters": [
+          {
+            "name": "idCliente",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Consulta realizada com sucesso."
+          },
+          "400": {
+            "description": "Houve algum erro na requisição."
+          },
+          "404": {
+            "description": "Pedido não encontrado."
+          }
+        }
+      }
+    },
+    "/pedidos/{idPedido}/finalizar": {
+      "post": {
+        "tags": [
+          "Pedidos"
+        ],
+        "description": "Endpoint para finalizar o pedido do cliente.",
+        "parameters": [
+          {
+            "name": "idPedido",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Pedido finalizado."
+          },
+          "400": {
+            "description": "Houve algum erro na requisição."
+          },
+          "404": {
+            "description": "Pedido não encontrado."
           }
         }
       }
     }
   },
-  "definitions": {}
+  "definitions": {
+    "Produtos": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 1
+        },
+        "produto": {
+          "type": "string",
+          "example": "Notebook"
+        },
+        "categoria": {
+          "type": "string",
+          "example": "Informática"
+        },
+        "valor": {
+          "type": "number",
+          "example": 2500
+        },
+        "descricao": {
+          "type": "string",
+          "example": "Notebook com memória de 4GB, SSD de 128GB, processamento em 64bits, branco."
+        },
+        "marca": {
+          "type": "string",
+          "example": "Dell"
+        },
+        "updated_at": {
+          "type": "string",
+          "example": "2021-12-12 03:03:00"
+        },
+        "created_at": {
+          "type": "string",
+          "example": "2021-12-12 03:03:00"
+        }
+      }
+    },
+    "Lojas": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 1
+        },
+        "filial": {
+          "type": "string",
+          "example": "Magalu SP"
+        },
+        "endereco": {
+          "type": "string",
+          "example": "Bairro Lago das Rosas, quadra 70, rua 92."
+        },
+        "bairro": {
+          "type": "string",
+          "example": "Lago das Rosas"
+        },
+        "cidade": {
+          "type": "string",
+          "example": "São Paulo"
+        },
+        "cep": {
+          "type": "string",
+          "example": "12345678"
+        },
+        "updated_at": {
+          "type": "string",
+          "example": "2021-12-12 03:03:00"
+        },
+        "created_at": {
+          "type": "string",
+          "example": "2021-12-12 03:03:00"
+        }
+      }
+    }
+  }
 }
